--- a/app/src/main/res/drawable/ic_circles.xml
+++ b/app/src/main/res/drawable/ic_circles.xml
@@ -1,34 +1,18 @@
 <!--
   ~ Nextcloud - Android Client
   ~
-  ~ SPDX-FileCopyrightText: 2020-2024 Nextcloud GmbH, all rights reserved
-  ~ SPDX-FileCopyrightText: 2020-2024 Tobias Kaminsky <tobias@kaminsky.me>
-  ~ SPDX-License-Identifier: AGPL-3.0-or-later
+  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
+  ~ SPDX-License-Identifier: Apache-2.0
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:width="64dp"
-    android:height="64dp"
+    android:width="24dp"
+    android:height="24dp"
     android:autoMirrored="true"
-    android:viewportWidth="57"
-    android:viewportHeight="57"
-    tools:ignore="VectorRaster">
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+
     <path
-        android:fillAlpha="1"
-        android:fillColor="#00000000"
-        android:pathData="M7.1,28.5A21.4,21.4 0,0 1,28.5 7.1m10.7,40A21.4,21.4 0,0 1,10 39M39.2,10A21.4,21.4 0,0 1,47 39.2"
-        android:strokeWidth="3.99979687"
-        android:strokeAlpha="1"
-        android:strokeColor="#000000"
-        android:strokeLineCap="round"
-        android:strokeLineJoin="round" />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M28.5,7.1m-6.5,0a6.5,6.5 0,1 1,13 0a6.5,6.5 0,1 1,-13 0" />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M10,39.2m-0,-6.5a6.5,6.5 0,1 1,-0 13a6.5,6.5 0,1 1,-0 -13" />
-    <path
-        android:fillColor="#000000"
-        android:pathData="M47,39.2m-0,-6.5a6.5,6.5 0,1 1,-0 13a6.5,6.5 0,1 1,-0 -13" />
+        android:fillColor="#FF000000"
+        android:fillType="nonZero"
+        android:pathData="M0.99,17.505L0.99,16.06C0.99,15.402 1.327,14.867 2,14.454C2.672,14.041 3.559,13.835 4.66,13.835C4.859,13.835 5.05,13.839 5.234,13.846C5.417,13.854 5.593,13.873 5.761,13.904C5.548,14.225 5.387,14.562 5.28,14.913C5.172,15.264 5.119,15.631 5.119,16.014L5.119,17.505L0.99,17.505ZM6.495,17.505L6.495,16.014C6.495,15.525 6.629,15.077 6.897,14.673C7.164,14.267 7.543,13.911 8.032,13.606C8.521,13.3 9.106,13.071 9.787,12.917C10.467,12.764 11.205,12.688 12,12.688C12.81,12.688 13.556,12.764 14.237,12.917C14.917,13.071 15.502,13.3 15.991,13.606C16.48,13.911 16.855,14.267 17.115,14.673C17.374,15.077 17.505,15.525 17.505,16.014L17.505,17.505L6.495,17.505ZM18.881,17.505L18.881,16.014C18.881,15.617 18.831,15.241 18.732,14.89C18.632,14.539 18.484,14.209 18.285,13.904C18.452,13.873 18.625,13.854 18.801,13.846C18.976,13.839 19.156,13.835 19.34,13.835C20.441,13.835 21.328,14.038 22,14.443C22.673,14.848 23.01,15.387 23.01,16.06L23.01,17.505L18.881,17.505ZM4.66,12.917C4.156,12.917 3.724,12.738 3.365,12.379C3.005,12.019 2.825,11.587 2.825,11.083C2.825,10.562 3.005,10.127 3.365,9.775C3.724,9.424 4.156,9.248 4.66,9.248C5.181,9.248 5.616,9.424 5.968,9.775C6.319,10.127 6.495,10.562 6.495,11.083C6.495,11.587 6.319,12.019 5.968,12.379C5.616,12.738 5.181,12.917 4.66,12.917ZM19.34,12.917C18.835,12.917 18.403,12.738 18.044,12.379C17.685,12.019 17.505,11.587 17.505,11.083C17.505,10.562 17.685,10.127 18.044,9.775C18.403,9.424 18.835,9.248 19.34,9.248C19.86,9.248 20.296,9.424 20.647,9.775C20.998,10.127 21.175,10.562 21.175,11.083C21.175,11.587 20.998,12.019 20.647,12.379C20.296,12.738 19.86,12.917 19.34,12.917ZM12,12C11.236,12 10.585,11.732 10.05,11.197C9.516,10.662 9.248,10.012 9.248,9.248C9.248,8.468 9.516,7.815 10.05,7.287C10.585,6.759 11.236,6.495 12,6.495C12.78,6.495 13.434,6.759 13.962,7.287C14.489,7.815 14.752,8.468 14.752,9.248C14.752,10.012 14.489,10.662 13.962,11.197C13.434,11.732 12.78,12 12,12Z" />
 </vector>
