--- a/app/src/main/res/layout/file_details_share_share_item.xml
+++ b/app/src/main/res/layout/file_details_share_share_item.xml
@@ -4,6 +4,7 @@
   ~
   ~ SPDX-FileCopyrightText: 2021 TSI-mc
   ~ SPDX-FileCopyrightText: 2018 Andy Scherzinger <info@andy-scherzinger.de>
+  ~ SPDX-FileCopyrightText: 2015 Masensio <masensio@solidgear.es
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
