--- a/app/src/main/res/layout/files_folder_picker.xml
+++ b/app/src/main/res/layout/files_folder_picker.xml
@@ -6,7 +6,7 @@
   ~ SPDX-FileCopyrightText: 2017-2024 Andy Scherzinger <info@andy-scherzinger.de>
   ~ SPDX-FileCopyrightText: 2020 Joris Bodin <joris.bodin@infomaniak.com>
   ~ SPDX-FileCopyrightText: 2015 ownCloud Inc.
-  ~ SPDX-FileCopyrightText: 22014 jabarros <jabarros@solidgear.es>
+  ~ SPDX-FileCopyrightText: 2014 Jose Antonio Barros Ramos <jabarros@solidgear.es>
   ~ SPDX-License-Identifier: GPL-2.0-only AND AGPL-3.0-or-later
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
