--- a/app/src/main/res/xml/app_config.xml
+++ b/app/src/main/res/xml/app_config.xml
@@ -19,4 +19,10 @@
         android:restrictionType="integer"
         android:title="@string/app_config_proxy_port_title" />
 
+    <restriction
+        android:key="base_url"
+        android:defaultValue=""
+        android:restrictionType="string"
+        android:title="@string/app_config_base_url_title" />
+
 </restrictions>
