--- a/app/src/main/res/drawable/file_pdf.xml
+++ b/app/src/main/res/drawable/file_pdf.xml
@@ -1,5 +1,17 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:viewportHeight="96" android:viewportWidth="96" android:width="24dp">
-      
-    <path android:fillColor="#FF2116" android:pathData="M76,12H20C15.6,12 12,15.6 12,20V76C12,80.4 15.6,84 20,84H76C80.4,84 84,80.4 84,76V20C84,15.6 80.4,12 76,12ZM38,46C38,49.2 35.2,52 32,52H28V60H22V36H32C35.2,36 38,38.8 38,42V46ZM58,54C58,57.2 55.2,60 52,60H42V36H52C55.2,36 58,38.8 58,42V54ZM74,42H68V46H74V52H68V60H62V36H74V42ZM48,42H52V54H48V42ZM28,42H32V46H28V42Z"/>
-    
+<!--
+  ~ Nextcloud - Android Client
+  ~
+  ~ SPDX-FileCopyrightText: 2018-2024 Google LLC
+  ~ SPDX-License-Identifier: Apache-2.0
+-->
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="96"
+    android:viewportHeight="96">
+
+    <path
+        android:fillColor="#FF2116"
+        android:pathData="M76,12H20C15.6,12 12,15.6 12,20V76C12,80.4 15.6,84 20,84H76C80.4,84 84,80.4 84,76V20C84,15.6 80.4,12 76,12ZM38,46C38,49.2 35.2,52 32,52H28V60H22V36H32C35.2,36 38,38.8 38,42V46ZM58,54C58,57.2 55.2,60 52,60H42V36H52C55.2,36 58,38.8 58,42V54ZM74,42H68V46H74V52H68V60H62V36H74V42ZM48,42H52V54H48V42ZM28,42H32V46H28V42Z" />
+
 </vector>
