--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -84,19 +84,18 @@
         <item name="android:datePickerMode">calendar</item>
     </style>
 
-    <style name="FallbackTheming.Dialog" parent="Theme.Material3.DayNight.Dialog">
+    <style name="FallbackTheming.Dialog" parent="ThemeOverlay.Material3.Dialog.Alert">
+        <item name="colorSecondaryContainer">#757575</item>
         <item name="colorPrimary">#424242</item>
-        <item name="colorPrimaryDark">#212121</item>
-        <item name="colorAccent">#757575</item>
         <item name="windowNoTitle">false</item>
         <item name="android:windowBackground">@color/bg_default</item>
         <item name="android:textAllCaps">false</item>
+        <item name="buttonBarPositiveButtonStyle">@style/Fallback.TonalButton</item>
         <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>
-        <item name="android:buttonBarButtonStyle">@style/FallbackTheming.Dialog.ButtonStyle</item>
     </style>
 
-    <style name="FallbackTheming.Dialog.ButtonStyle" parent="Widget.Material3.Button.TextButton.Dialog">
-        <item name="android:textColor">@color/text_color</item>
+    <style name="Fallback.TonalButton" parent="Widget.Material3.Button.TonalButton">
+        <item name="android:textColor">#FFFFFF</item>
     </style>
 
     <style name="Theme.ownCloud.ToolbarBase" parent="BaseTheme.ownCloud.Toolbar">
