--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -269,7 +269,7 @@
     </style>
 
     <!-- Dialogs -->
-    <style name="Theme.ownCloud.Dialog" parent="@style/Theme.Material3.DayNight.Dialog.Alert">
+    <style name="Theme.ownCloud.Dialog" parent="@style/ThemeOverlay.Material3.Dialog.Alert">
         <item name="windowNoTitle">false</item>
         <item name="colorAccent">@color/color_accent</item>
         <item name="android:textAllCaps">false</item>
