--- a/app/src/main/res/layout/internal_two_way_sync_view_holder.xml
+++ b/app/src/main/res/layout/internal_two_way_sync_view_holder.xml
@@ -8,24 +8,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/min_list_item_size"
+    android:orientation="horizontal">
 
     <ImageView
         android:layout_width="@dimen/file_icon_size"
         android:layout_height="@dimen/file_icon_size"
+        android:layout_gravity="center_vertical"
         android:contentDescription="@null"
         android:src="@drawable/folder" />
-    
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="Folder abc" />
 
-    <TextView
-        android:id="@+id/sync_timestamp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="5 min ago" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/min_list_item_size"
+        android:layout_marginStart="@dimen/standard_margin"
+        android:gravity="center_vertical"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:textStyle="bold"
+            tools:text="Folder abc" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                tools:text="241 Mb" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:paddingStart="@dimen/zero"
+                android:paddingEnd="@dimen/standard_quarter_padding"
+                android:text="@string/info_separator"
+                android:textColor="@color/list_item_lastmod_and_filesize_text"
+                android:textSize="@dimen/two_line_secondary_text_size" />
+
+            <TextView
+                android:id="@+id/sync_timestamp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                tools:text="5 min ago" />
+
+            <TextView
+                android:id="@+id/sync_result_divider"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"
+                android:paddingStart="@dimen/zero"
+                android:paddingEnd="@dimen/standard_quarter_padding"
+                android:text="@string/info_separator"
+                android:textColor="@color/list_item_lastmod_and_filesize_text"
+                android:textSize="@dimen/two_line_secondary_text_size" />
+
+            <TextView
+                android:id="@+id/sync_result"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                tools:text="Success" />
+
+        </LinearLayout>
+    </LinearLayout>
+
+
 </LinearLayout>
