--- a/app/src/main/res/layout/conflict_resolve_dialog.xml
+++ b/app/src/main/res/layout/conflict_resolve_dialog.xml
@@ -17,14 +17,7 @@
     android:paddingBottom="@dimen/standard_padding">
 
     <TextView
-        android:id="@+id/folder_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/in_folder"
-        android:paddingBottom="@dimen/standard_padding" />
-
-    <TextView
-        android:id="@+id/title"
+        android:id="@+id/headline"
         android:layout_marginTop="@dimen/standard_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
